erDiagram
    USERS {
        int id PK
        varchar username
        varchar email
        varchar password_hash
        varchar avatar_url
        varchar faceit_id
        timestamp created_at
        timestamp updated_at
    }

    TEAMS {
        int id PK
        varchar name
        varchar logo_url
        varchar banner_url
        int captain_id FK
        int elo_avg
        timestamp created_at
        timestamp updated_at
    }

    TEAM_MEMBERS {
        int id PK
        int team_id FK
        int user_id FK
        timestamp joined_at
        varchar role
    }

    MAPS {
        int id PK
        varchar name
    }

    SCRIMS {
        int id PK
        int team_id FK
        int participating_team_id FK
        int map_id FK
        int elo_min
        int elo_max
        timestamp date
        timestamp created_at
        timestamp updated_at
    }

    FACEIT_STATS {
        int id PK
        int user_id FK
        int elo
        int matches_played
        int wins
        timestamp last_update
    }

%% RELATIONS
    USERS ||--o{ TEAM_MEMBERS : "is member of"
    TEAMS ||--o{ TEAM_MEMBERS : "has members"
    TEAMS ||--o{ SCRIMS : "creates"
    TEAMS ||--o{ SCRIMS : "participates in"
    MAPS ||--o{ SCRIMS : "played on"
    USERS ||--o{ FACEIT_STATS : "has stats"
